--- a/PrismSample/PrismSample/Pages/MainPage.xaml
+++ b/PrismSample/PrismSample/Pages/MainPage.xaml
@@ -6,7 +6,8 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    NavigationPage.HasNavigationBar="False">
+    Title="Main Page"
+    NavigationPage.HasNavigationBar="True">
 
     <StackLayout>
         <!--  Place new controls here  -->
