--- a/PrismSample/PrismSample/Pages/Page6.xaml
+++ b/PrismSample/PrismSample/Pages/Page6.xaml
@@ -8,7 +8,8 @@
     xmlns:mvvm="http://prismlibrary.com"
     mc:Ignorable="d"
     mvvm:ViewModelLocator.AutowireViewModel="True"
-    NavigationPage.HasNavigationBar="False"
+    NavigationPage.HasNavigationBar="true"
+    Title="Page 6"
     BackgroundColor="DarkMagenta">
     <ContentPage.Content>
         <StackLayout
