added necessary view models

--- a/PrismSample/PrismSample/Pages/MainPage.xaml
+++ b/PrismSample/PrismSample/Pages/MainPage.xaml
@@ -5,14 +5,16 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="http://prismlibrary.com"
     mc:Ignorable="d"
+    mvvm:ViewModelLocator.AutowireViewModel="True"
     Title="Main Page"
     NavigationPage.HasNavigationBar="True">
 
     <StackLayout>
         <!--  Place new controls here  -->
         <Label
-            Text="Welcome to Xamarin.Forms!"
+            Text="{Binding Title}"
             HorizontalOptions="Center"
             VerticalOptions="CenterAndExpand" />
     </StackLayout>
