--- a/PrismSample/PrismSample/Pages/MyFlyOutPage.xaml
+++ b/PrismSample/PrismSample/Pages/MyFlyOutPage.xaml
@@ -1,24 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<MasterDetailPage
-    x:Class="PrismSample.Pages.MyMasterPage"
+<FlyoutPage
+    x:Class="PrismSample.Pages.MyFlyOutPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pages="clr-namespace:PrismSample.Pages"
     xmlns:mvvm="http://prismlibrary.com"
-    xmlns:viewModels="clr-namespace:PrismSample.ViewModels;assembly=PrismSample"
     mc:Ignorable="d"
     mvvm:ViewModelLocator.AutowireViewModel="True"
     NavigationPage.HasNavigationBar="False">
-    <MasterDetailPage.Master>
-        <pages:MyMasterPageMaster x:Name="MasterPage" />
-    </MasterDetailPage.Master>
-    <MasterDetailPage.Detail>
+    <FlyoutPage.Flyout>
+        <pages:MyFlyOutMenuPage x:Name="FlyOutPage" />
+    </FlyoutPage.Flyout>
+    <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
                 <pages:MainPage />
             </x:Arguments>
         </NavigationPage>
-    </MasterDetailPage.Detail>
-</MasterDetailPage>
+    </FlyoutPage.Detail>
+</FlyoutPage>
